--- a/web.config
+++ b/web.config
@@ -35,7 +35,7 @@
         <add name="Referrer-Policy" value="strict-origin-when-cross-origin" />
         <add name="X-Frame-Options" value="SAMEORIGIN" />
         <add name="Permissions-Policy" value="camera=(), microphone=(), geolocation=()" />
-              <add name="Content-Security-Policy" value="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://api.ipify.org https://ifconfig.me https://icanhazip.com https://api64.ipify.org; frame-ancestors 'self'; object-src 'none'; base-uri 'self'" />
+              <add name="Content-Security-Policy" value="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net; img-src 'self' data: https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net; frame-src 'self' https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net; connect-src 'self' https://api.ipify.org https://ifconfig.me https://icanhazip.com https://api64.ipify.org https://googleads.g.doubleclick.net; frame-ancestors 'self'; object-src 'none'; base-uri 'self'" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
